comment out code

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Autocast Not Possible Warning
+author=Bookland.eth 
 support=
 description=An example greeter plugin
-tags=
+tags=inferno,magic, notification, chat, 
 plugins=com.example.ExamplePlugin
